fixed spacing and fonts!

--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -1,7 +1,9 @@
 @import "_variables";
+
 html {
   background-color: lighten($quaternary-color, 80%);
 }
+
 body {
   font-family: $serif-fonts;
   font-size: $font-base-size;
@@ -25,6 +27,7 @@ h2 {
 h3 {
   font-size: $font-base-size * 1.75;
 }
+
 h4 {
   font-size: $font-base-size * 1.5;
 }
@@ -36,12 +39,14 @@ h5 {
 h6{
   font-size: $font-base-size * 1;
 }
+
 p {
   font-size: $font-base-size * 1;
 }
 
 input, textarea {
   font-size: $font-base-size * .75;
+  font-family: $serif-fonts;
   border-radius: $border-radius;
   background-color: $tertiary-color;
 }
